--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,13 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "BrailleR"]
+	path = BrailleR
+	url = https://github.com/ajrgodfrey/brailler
+	shallow = true
+	registered = true
+[submodule "Dodge"]
+	path = Dodge
+	url = https://github.com/ajrgodfrey/dodge
+	shallow = true
+	registered = true
