--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,8 @@
 	url = https://github.com/ajrgodfrey/brailler
 	shallow = true
 	registered = true
+[submodule "Dodge"]
+	path = Dodge
+	url = https://github.com/ajrgodfrey/dodge
+	shallow = true
+	registered = true
